force-app/main/default/objects/Opportunity/fields/Auxiliar_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Auxiliar_oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auxiliar de oportunidad</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>