force-app/main/default/objects/Opportunity/fields/Collaborators_IDs__c.field-meta.xml
<CustomField>
    <fullName>Collaborators_IDs__c</fullName>
    <description>Almacena los IDs de los agentes colaboradores autorizados para ver la documentación de onboarding.</description>
    <label>IDs de Colaboradores Onboarding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>