force-app/main/default/objects/Opportunity/fields/Estado_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Estado_Oportunidad__c</fullName>
    <label>Estado Oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activa</fullName>
            </value>
            <value>
                <fullName>Inactiva</fullName>
            </value>
            <value>
                <fullName>Negociación</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Concluido</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>