force-app/main/default/objects/Opportunity/fields/Estado_Subetapa__c.field-meta.xml
<CustomField>
    <fullName>Estado_Subetapa__c</fullName>
    <label>Estado Subetapa</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subetapa__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente confirmación cliente</fullName>
            </value>
            <value>
                <fullName>Pendiente confirmación Pyatz</fullName>
            </value>
            <value>
                <fullName>En proceso</fullName>
            </value>
            <value>
                <fullName>Realizado</fullName>
            </value>
            <value>
                <fullName>Falta información</fullName>
            </value>
            <value>
                <fullName>En proceso - en tiempo</fullName>
            </value>
            <value>
                <fullName>Pendiente definición</fullName>
            </value>
            <value>
                <fullName>Pendiente información Pyatz</fullName>
            </value>
            <value>
                <fullName>Pendiente información proveedor</fullName>
            </value>
            <value>
                <fullName>Pendiente de envío a cliente</fullName>
            </value>
            <value>
                <fullName>Recepción no confirmada con cliente.</fullName>
            </value>
            <value>
                <fullName>Recepción confirmada con cliente</fullName>
            </value>
            <value>
                <fullName>Sin seguimiento</fullName>
            </value>
            <value>
                <fullName>Sin respuesta del cliente</fullName>
            </value>
            <value>
                <fullName>Seguimiento activo</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>En proceso de autorización</fullName>
            </value>
            <value>
                <fullName>Ajuste de presupuesto</fullName>
            </value>
            <value>
                <fullName>Aceptado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>