force-app/main/default/objects/Opportunity/fields/Estatus_Proceso_JSON__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Proceso_JSON__c</fullName>
    <description>Guarda el historial de estados de las sub-etapas en formato JSON para el Panel de Salud 360.</description>
    <label>Estatus Proceso JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>