force-app/main/default/objects/Opportunity/fields/Linea_de_negocio2__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_negocio2__c</fullName>
    <label>Líneas de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambiental</fullName>
            </value>
            <value>
                <fullName>H&amp;H</fullName>
            </value>
            <value>
                <fullName>Retardante</fullName>
            </value>
            <value>
                <fullName>Selladores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>