force-app/main/default/objects/Opportunity/fields/Linea_de_negocio__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_negocio__c</fullName>
    <label>Líneas de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMBIENTAL</fullName>
            </value>
            <value>
                <fullName>HH</fullName>
            </value>
            <value>
                <fullName>RETARDANTE</fullName>
            </value>
            <value>
                <fullName>SELLADORES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>