force-app/main/default/objects/Opportunity/fields/Linea_negocio__c.field-meta.xml
<CustomField>
    <fullName>Linea_negocio__c</fullName>
    <label>Línea de negocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>