force-app/main/default/objects/Opportunity/fields/Memoria_Descriptiva__c.field-meta.xml
<CustomField>
    <fullName>Memoria_Descriptiva__c</fullName>
    <description>Redacción de la memoria técnica descriptiva del levantamiento.</description>
    <label>Memoria Descriptiva</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>