force-app/main/default/objects/Opportunity/fields/Modalidad_compra__c.field-meta.xml
<CustomField>
    <fullName>Modalidad_compra__c</fullName>
    <label>Modalidad de compra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>