force-app/main/default/objects/Opportunity/fields/Onboarding_Pin__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Pin__c</fullName>
    <description>PIN de seguridad para acceso a la bóveda de onboarding del proyecto.</description>
    <inlineHelpText>Ingrese 4-6 dígitos para proteger la información sensible del onboarding.</inlineHelpText>
    <label>PIN de Onboarding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>