force-app/main/default/objects/Opportunity/fields/Subetapa__c.field-meta.xml
<CustomField>
    <fullName>Subetapa__c</fullName>
    <label>Subetapa</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Levantamiento</fullName>
            </value>
            <value>
                <fullName>Memoria</fullName>
            </value>
            <value>
                <fullName>Def. solución</fullName>
            </value>
            <value>
                <fullName>Presupuesto</fullName>
            </value>
            <value>
                <fullName>Envío cotización</fullName>
            </value>
            <value>
                <fullName>Seguimiento</fullName>
            </value>
            <value>
                <fullName>Autorización</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>