force-app/main/default/objects/Opportunity/fields/Sublinea_negocio__c.field-meta.xml
<CustomField>
    <fullName>Sublinea_negocio__c</fullName>
    <label>Sublínea de negocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>