force-app/main/default/objects/Opportunity/fields/Tipo_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_compra__c</fullName>
    <label>Tipo de compra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>